--- a/src/testsuites/Makefile
+++ b/src/testsuites/Makefile
@@ -8,7 +8,7 @@ LDFLAGS += -L./ -Lcu/ -lcu -lrt -lm -L../ -lmg
 CHECK_REG=cu/check-regressions
 CHECK_TS ?=
 
-OBJS = vec3.o
+OBJS = vec3.o vec2.o
 BENCH_OBJS =
 
 
