--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@
 CFLAGS += -I.
 
 TARGETS = libmg.a
-OBJS = alloc.o vec3.o vec2.o tr2.o
+OBJS = alloc.o vec3.o vec2.o tr2.o quat.o
 
 all: $(TARGETS)
 
