--- a/src/Makefile
+++ b/src/Makefile
@@ -19,7 +19,8 @@
 CFLAGS += -I.
 
 TARGETS = libmg.a
-OBJS = alloc.o vec3.o vec2.o tr2.o quat.o
+OBJS = alloc.o vec3.o vec2.o tr2.o quat.o \
+       point_cloud.o point_cloud_internal.o
 
 all: $(TARGETS)
 
