--- a/src/Makefile.include
+++ b/src/Makefile.include
@@ -15,6 +15,7 @@
 ##
 
 CC ?= gcc
+CXX ?= g++
 M4 ?= m4
 PYTHON ?= python
 
@@ -39,16 +40,20 @@ endif
 
 ifeq '$(DEBUG)' 'yes'
   CFLAGS = -g
+  CXXFLAGS = -g
 endif
 ifeq '$(PROFIL)' 'yes'
   CFLAGS += -pg
+  CXXFLAGS += -pg
 endif
 
 ifneq '$(NOWALL)' 'yes'
   CFLAGS += -Wall
+  CXXFLAGS += -Wall
 endif
 ifneq '$(NOPEDANTIC)' 'yes'
   CFLAGS += -pedantic
+  CXXFLAGS += -pedantic
 endif
 
 CONFIG_FLAGS =
@@ -77,7 +82,9 @@ showvars:
 	@echo "SYSTEM = "$(SYSTEM)
 	@echo ""
 	@echo "CC      = $(CC)"
+	@echo "CXX     = $(CXX)"
 	@echo "M4      = $(M4)"
+	@echo "PYTHON  = $(PYTHON)"
 	@echo ""
 	@echo "DEBUG      = $(DEBUG)"
 	@echo "PROFIL     = $(PROFIL)"
@@ -87,6 +94,7 @@ showvars:
 	@echo "USE_DOUBLE = $(USE_DOUBLE)"
 	@echo ""
 	@echo "CFLAGS       = $(CFLAGS)"
+	@echo "CXXFLAGS     = $(CXXFLAGS)"
 	@echo "LDFLAGS      = $(LDFLAGS)"
 	@echo "CONFIG_FLAGS = $(CONFIG_FLAGS)"
 	@echo ""
