SSE: Implemented double precision and fixed some issues.

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,7 +16,7 @@
 
 -include Makefile.include
 
-CFLAGS += -I.
+CFLAGS += -I. -g
 
 TARGETS = libmg.a
 OBJS = alloc.o vec3.o vec2.o tr2.o quat.o parse.o \
