--- a/src/Makefile.include
+++ b/src/Makefile.include
@@ -1,9 +1,9 @@
 ###
-# mg
-# ---
+# fermat
+# -------
 # Copyright (c)2010 Daniel Fiser <danfis@danfis.cz>
 #
-#  This file is part of mg.
+#  This file is part of fermat.
 #
 #  Distributed under the OSI-approved BSD License (the "License");
 #  see accompanying file BDS-LICENSE for details or see
