--- a/src/testsuites/Makefile
+++ b/src/testsuites/Makefile
@@ -10,7 +10,7 @@ CHECK_REG=cu/check-regressions
 CHECK_TS ?=
 
 OBJS = vec4.o vec3.o vec2.o tr2.o quat.o point_cloud.o \
-       data-vec3.o data-quat.o data-vec4.o
+       data-vec2.o data-vec3.o data-quat.o data-vec4.o
 BENCH_OBJS =
 
 
