Implemented Mat3 without tests.

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,7 +20,8 @@ CFLAGS += -I. -g
 
 TARGETS = libfermat.a
 OBJS = alloc.o vec4.o vec3.o vec2.o tr2.o parse.o \
-       point_cloud.o point_cloud_internal.o
+       point_cloud.o point_cloud_internal.o \
+       mat3.o
 
 all: $(TARGETS)
 
