--- a/src/Makefile
+++ b/src/Makefile
@@ -19,7 +19,7 @@
 CFLAGS += -I. -g
 
 TARGETS = libfermat.a
-OBJS = alloc.o vec4.o vec3.o vec2.o tr2.o parse.o \
+OBJS = alloc.o vec4.o vec3.o vec2.o parse.o \
        point_cloud.o point_cloud_internal.o \
        mat3.o
 
