Implemented general matrix (wrapper around GSL) without tests.

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,7 +21,11 @@ CFLAGS += -I. -g
 TARGETS = libfermat.a
 OBJS = alloc.o vec4.o vec3.o vec2.o parse.o \
        point_cloud.o point_cloud_internal.o \
-       mat3.o mat4.o mat.o
+       mat3.o mat4.o
+
+ifeq '$(USE_GSL)' 'yes'
+  OBJS += mat.o
+endif
 
 all: $(TARGETS)
 
