Improved compile chain.

--- a/src/Makefile.include
+++ b/src/Makefile.include
@@ -19,6 +19,9 @@ CXX ?= g++
 M4 ?= m4
 PYTHON ?= python
 
+GSL_CONFIG 	  ?= gsl-config
+PYTHON_CONFIG ?= python-config
+
 CC_NOT_GCC = no
 
 SYSTEM = $(shell uname)
@@ -70,8 +73,19 @@ endif
 endif
 
 USE_SSE ?= no
-USE_GSL ?= yes
+USE_GSL ?= auto
 CONFIG_FLAGS =
+
+
+ifeq '$(USE_GSL)' 'auto'
+  HAVE_GSL := $(shell if $(GSL_CONFIG) --version >/dev/null 2>&1; then echo "yes"; else echo "no"; fi;)
+  ifeq '$(HAVE_GSL)' 'yes'
+    USE_GSL = yes
+  else
+    USE_GSL = no
+  endif
+endif
+
 
 ifeq '$(USE_SINGLE)' 'yes'
   CONFIG_FLAGS += -DUSE_SINGLE
@@ -86,6 +100,8 @@ ifeq '$(USE_SSE)' 'yes'
 endif
 ifeq '$(USE_GSL)' 'yes'
   CONFIG_FLAGS += -DUSE_GSL
+  GSL_CFLAGS  = $(shell $(GSL_CONFIG) --cflags)
+  GSL_LDFLAGS = $(shell $(GSL_CONFIG) --libs)
 endif
 
 ifneq '$(CC_NOT_GCC)' 'yes'
@@ -93,8 +109,8 @@ ifneq '$(CC_NOT_GCC)' 'yes'
 endif
 LDFLAGS += $(SYSTEM_LDFLAGS)
 
-PYTHON_CFLAGS  = $(shell python-config --includes)
-PYTHON_LDFLAGS = $(shell python-config --libs)
+PYTHON_CFLAGS  = $(shell $(PYTHON_CONFIG) --includes)
+PYTHON_LDFLAGS = $(shell $(PYTHON_CONFIG) --libs)
 
 CHECKTARGETS = 
 check-dep: $(CHECKTARGETS)
@@ -111,6 +127,11 @@ showvars:
 	@echo "M4      = $(M4)"
 	@echo "PYTHON  = $(PYTHON)"
 	@echo ""
+	@echo "GSL_CONFIG     = $(GSL_CONFIG)"
+	@echo "PYTHON_CONFIG  = $(PYTHON_CONFIG)"
+	@echo ""
+	@echo "CC_NOT_GCC = $(CC_NOT_GCC)"
+	@echo ""
 	@echo "DEBUG      = $(DEBUG)"
 	@echo "PROFIL     = $(PROFIL)"
 	@echo "NOWALL     = $(NOWALL)"
@@ -118,6 +139,7 @@ showvars:
 	@echo "USE_SINGLE = $(USE_SINGLE)"
 	@echo "USE_DOUBLE = $(USE_DOUBLE)"
 	@echo "USE_SSE    = $(USE_SSE)"
+	@echo "USE_GSL    = $(USE_GSL)"
 	@echo ""
 	@echo "CFLAGS       = $(CFLAGS)"
 	@echo "CXXFLAGS     = $(CXXFLAGS)"
@@ -125,6 +147,8 @@ showvars:
 	@echo "CONFIG_FLAGS = $(CONFIG_FLAGS)"
 	@echo "PYTHON_CFLAGS  = $(PYTHON_CFLAGS)"
 	@echo "PYTHON_LDFLAGS = $(PYTHON_LDFLAGS)"
+	@echo "GSL_CFLAGS     = $(GSL_CFLAGS)"
+	@echo "GSL_LDFLAGS    = $(GSL_LDFLAGS)"
 	@echo ""
 	@echo "PREFIX     = $(PREFIX)"
 	@echo "INCLUDEDIR = $(INCLUDEDIR)"
