--- a/src/Makefile
+++ b/src/Makefile
@@ -23,6 +23,8 @@ OBJS = alloc.o vec4.o vec3.o vec2.o parse.o \
        point_cloud.o point_cloud_internal.o \
        mat3.o mat4.o predicates.o
 
+OBJS += nearest/cubes3.o
+
 ifeq '$(USE_GSL)' 'yes'
   OBJS += mat.o vec.o
   CFLAGS += $(GSL_CFLAGS)
@@ -38,6 +40,8 @@ fermat/config.h: fermat/config.h.m4
 	$(M4) $(CONFIG_FLAGS) $< >$@
 
 %.o: %.c fermat/%.h fermat/config.h
+	$(CC) $(CFLAGS) $(DEFS) -c -o $@ $<
+nearest/%.o: nearest/%.c fermat/nearest/%.h fermat/config.h
 	$(CC) $(CFLAGS) $(DEFS) -c -o $@ $<
 %.o: %.c fermat/config.h
 	$(CC) $(CFLAGS) $(DEFS) -c -o $@ $<
