Simple 3d mesh implemented.

--- a/src/Makefile
+++ b/src/Makefile
@@ -22,8 +22,8 @@ TARGETS = libfermat.a
 OBJS = alloc.o vec4.o vec3.o vec2.o parse.o \
        point_cloud.o point_cloud_internal.o \
        mat3.o mat4.o predicates.o
-
 OBJS += nearest/cubes3.o
+OBJS += mesh/mesh3.o
 
 ifeq '$(USE_GSL)' 'yes'
   OBJS += mat.o vec.o
@@ -42,6 +42,8 @@ fermat/config.h: fermat/config.h.m4
 %.o: %.c fermat/%.h fermat/config.h
 	$(CC) $(CFLAGS) $(DEFS) -c -o $@ $<
 nearest/%.o: nearest/%.c fermat/nearest/%.h fermat/config.h
+	$(CC) $(CFLAGS) $(DEFS) -c -o $@ $<
+mesh/%.o: mesh/%.c fermat/mesh/%.h fermat/config.h
 	$(CC) $(CFLAGS) $(DEFS) -c -o $@ $<
 %.o: %.c fermat/config.h
 	$(CC) $(CFLAGS) $(DEFS) -c -o $@ $<
