surface/gsrm: Printing info about progress of algorithm.

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,7 +21,7 @@ CFLAGS += -I. -g
 TARGETS = libfermat.a
 OBJS = alloc.o vec4.o vec3.o vec2.o parse.o \
        point_cloud.o point_cloud_internal.o \
-       mat3.o mat4.o predicates.o
+       mat3.o mat4.o predicates.o timer.o
 OBJS += nearest/cubes3.o
 OBJS += mesh/mesh3.o
 OBJS += surface/gsrm.o
