--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 ###
 # fermat
 # -------
-# Copyright (c)2010 Daniel Fiser <danfis@danfis.cz>
+# Copyright (c)2010-2011 Daniel Fiser <danfis@danfis.cz>
 #
 #  This file is part of fermat.
 #
@@ -17,8 +17,9 @@
 -include Makefile.include
 
 CFLAGS += -I. -g
+LDFLAGS += -L. -lfermat -lm -lrt
 
-TARGETS = libfermat.a
+TARGETS = libfermat.a gsrm
 OBJS = alloc.o vec4.o vec3.o vec2.o parse.o \
        point_cloud.o point_cloud_internal.o \
        mat3.o mat4.o predicates.o timer.o
@@ -36,6 +37,9 @@ all: $(TARGETS)
 libfermat.a: $(OBJS)
 	ar cr $@ $(OBJS)
 	ranlib $@
+
+gsrm: surface/gsrm-main.c libfermat.a
+	$(CC) $(CFLAGS) -o $@ $< $(LDFLAGS)
 
 fermat/config.h: fermat/config.h.m4
 	$(M4) $(CONFIG_FLAGS) $< >$@
