--- a/src/Makefile
+++ b/src/Makefile
@@ -14,9 +14,9 @@
 #  See the License for more information.
 ##
 
--include Makefile.include
+-include ../Makefile.include
 
-CFLAGS += -I. -g
+CFLAGS += -I.
 LDFLAGS += -L. -lfermat -lm -lrt
 
 TARGETS = libfermat.a gsrm
@@ -60,7 +60,7 @@ surface/%.o: surface/%.c fermat/surface/%.h fermat/config.h
 install:
 	mkdir -p $(PREFIX)/$(INCLUDEDIR)/fermat
 	mkdir -p $(PREFIX)/$(LIBDIR)
-	cp fermat/*.h $(PREFIX)/$(INCLUDEDIR)/fermat/
+	cp -r fermat/* $(PREFIX)/$(INCLUDEDIR)/fermat/
 	cp libfermat.a $(PREFIX)/$(LIBDIR)
 
 clean:
@@ -73,27 +73,5 @@ check:
 	$(MAKE) -C testsuites check
 check-valgrind:
 	$(MAKE) -C testsuites check-valgrind
-
-help:
-	@echo "Targets:"
-	@echo "    all     - Build library"
-	@echo "    install - Install library into system"
-	@echo ""
-	@echo "Options:"
-	@echo "    CC - Path to C compiler"
-	@echo "    M4 - Path to m4 macro processor"
-	@echo ""
-	@echo "    DEBUG 'yes'/'no'      - Turn on/off debugging (default: 'no')"
-	@echo "    PROFIL 'yes'/'no'     - Compiles profiling info (default: 'no')"
-	@echo "    NOWALL 'yes'/'no'     - Turns off -Wall gcc option (default: 'no')"
-	@echo "    NOPEDANTIC 'yes'/'no' - Turns off -pedantic gcc option (default: 'no')"
-	@echo ""
-	@echo "    USE_SINGLE 'yes' - Use single precision (default: 'no')"
-	@echo "    USE_DOUBLE 'yes' - Use double precision (default: 'yes')"
-	@echo ""
-	@echo "    PREFIX     - Prefix where library will be installed (default: /usr/local)"
-	@echo "    INCLUDEDIR - Directory where header files will be installed (PREFIX/INCLUDEDIR) (default: include)"
-	@echo "    LIBDIR     - Directory where library will be installed (PREFIX/LIBDIR) (default: lib)"
-	@echo ""
 
 .PHONY: all clean check check-valgrind help
