gann/gng3: Added to doc.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -13,7 +13,7 @@ FER_RSTS += mesh3
 FER_RSTS += cubes3 nearest-linear
 FER_RSTS += gsrm
 
-GANN_RSTS = net gng
+GANN_RSTS = net gng gng3
 
 FER_RSTS := $(foreach header,$(FER_RSTS),fer-$(header).h.rst)
 GANN_RSTS := $(foreach header,$(GANN_RSTS),gann-$(header).h.rst)
@@ -26,7 +26,7 @@ PAPEROPT_a4     = -D latex_paper_size=a4
 PAPEROPT_letter = -D latex_paper_size=letter
 ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 
-.PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest
+all: html
 
 help:
 	@echo "Please use \`make <target>' where <target> is one of"
@@ -149,3 +149,4 @@ clean:
 	rm -f $(RSTS)
 	rm -rf html/ doctrees/
 
+.PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest
