PC -> PC3: Renamed files.

--- a/fermat/Makefile
+++ b/fermat/Makefile
@@ -25,7 +25,7 @@ TARGETS = libfermat.a
 OBJS  = alloc.o timer.o parse.o
 OBJS += vec4.o vec3.o vec2.o
 OBJS += mat4.o mat3.o
-OBJS += pc.o pc-internal.o
+OBJS += pc3.o pc-internal.o
 OBJS += predicates.o
 OBJS += cubes3.o nearest-linear.o
 OBJS += mesh3.o qhull.o
