PC{2,3} - Fixed documentation.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -8,7 +8,7 @@ BUILDDIR      = .
 
 FER_RSTS  = list rand timer parse
 FER_RSTS += vec2 vec3 vec4 mat3 mat4 vec mat quat
-FER_RSTS += pc
+FER_RSTS += pc2 pc3
 FER_RSTS += mesh3
 FER_RSTS += cubes3 nearest-linear
 FER_RSTS += gsrm
