--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,17 @@
 *.o
 *~
 config.h
+fer-*
+gann-*
 fermat/fermat/pc4.h
 fermat/fermat/pc3.h
 fermat/fermat/pc2.h
 fermat/src/pc4.c
 fermat/src/pc3.c
 fermat/src/pc2.c
-fer-*
-gann-*
+gann/src/gng2.c
+gann/src/gng3.c
+gann/gann/gng2.h
+gann/gann/gng3.h
+gann/bin/gng-2d-main.h
+gann/bin/gng-3d-main.h
