--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,10 @@
 config.h
 fer-*
 gann-*
-fermat/fermat/pc4.h
-fermat/fermat/pc3.h
-fermat/fermat/pc2.h
-fermat/src/pc4.c
-fermat/src/pc3.c
-fermat/src/pc2.c
-gann/src/gng2.c
-gann/src/gng3.c
-gann/gann/gng2.h
-gann/gann/gng3.h
-gann/bin/gng-2d-main.h
-gann/bin/gng-3d-main.h
+fermat/fermat/pc[234].h
+fermat/fermat/cubes[234].h
+fermat/src/pc[234].c
+fermat/src/cubes[234].c
+gann/src/gng[23].c
+gann/gann/gng[23].h
+gann/bin/gng-[23]d-main.h
